# growfish

./: .gitignore  CMakeLists.txt  README.md
book/: bfendata.json  bkeydata.json  fendata.json  main.py  position.py  wfendata.json  wkeydata.json
magic/: CMakeLists.txt  magic_generator.cpp  magic_generator.h  main.cpp
src/: CMakeLists.txt  bitboard.cpp  bitboard.h  bitboard_cache.cpp  bitboard_cache.h  book.cpp  book.h  evaluate.cpp  evaluate.h  function.h  history.cpp  history.h  magic.cpp  magic.h  magic_base.h  main.cpp  move_generator.cpp  move_generator.h  move_generator.h.bak  move_picker.cpp  move_picker.h  position.cpp  position.h  search.cpp  search.h  structures.h  thread_pool.cpp  thread_pool.h  transposition_table.cpp  transposition_table.h  types.h  zobrist.h
src/pikafish_nnue_adapter/: bitboard.cpp  bitboard.h  evaluate.cpp  misc.cpp  position.cpp  position.h  types.h  uci.cpp  uci.h
test/: CMakeLists.txt  magic_validator.cpp  magic_validator.h  main.cpp  robot_battle.txt  robot_battle_1729653504763.txt  robot_battle_1729666476581.txt  robot_battle_1732956559883.txt  robot_battle_1733750483345.txt  robot_battle_1733917013899.txt  robot_battle_1733922523712.txt  robot_battle_1733924013886.txt
test/data/: opening_battle_1000.txt  opening_battle_500.txt  robot_battle.txt  robot_battle_1729759105954.txt  robot_battle_1732956559883.txt  robot_battle_1733750496914.txt  robot_battle_1733917045094.txt  robot_battle_1733922523712.txt  robot_battle_1733924013886.txt
